<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.auvious.android.example.HomeActivity">

        <!-- Call -->
        <TextView
            android:id="@+id/call_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/title_activity_call" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/call_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/call_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/call"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/call_btn" />
        </LinearLayout>

        <!-- Conference -->
        <TextView
            android:id="@+id/conference_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/title_activity_conference" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/conference_create_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/conference_create_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/conference_mode_spinner"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <Button
                android:id="@+id/conference_create"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/conference_create_btn" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/conference_join_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/conference_join_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/conference_join"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/conference_join_btn" />
        </LinearLayout>

        <TextView
            android:id="@+id/chat_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/title_activity_chat" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/chat_join_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/conference_join_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/chat_join"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/conference_join_btn" />
        </LinearLayout>

        <TextView
            android:id="@+id/presentation_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/title_activity_presentation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/presentation_join_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/conference_join_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/presentation_join"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/conference_join_btn" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="logout"
                android:text="@string/logout_btn" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>