<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context="com.test.test.call.CallActivity">

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/surface_guest"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/surface_user"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="bottom|right" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <Button
            android:id="@+id/hangup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:onClick="hangup"
            android:text="@string/call_hangup_btn"
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:visibility="gone" />

        <Button
            android:id="@+id/mute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="5"
            android:enabled="false"
            android:text="@string/call_mute_btn"
            android:visibility="gone"
            android:theme="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

    <Button
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/incoming_call_answer_btn"
        android:theme="@style/Widget.AppCompat.Button.Colored"
        android:visibility="gone" />
</FrameLayout>